Advanced_Feature/3.10_GRPCRoute_Method/gw-grpc-route.yaml
# 3.10 method 매칭: SayHello → coffee :50051, SayGoodbye → tea :50051
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: GRPCRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-method-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - grpc.f5bnk.com

  rules:
    - matches:
        - method:
            service: hello.HelloService
            method: SayHello

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com

    - matches:
        - method:
            service: hello.HelloService
            method: SayGoodbye

      backendRefs:
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com
